[package]
name = "tiler-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio_schedule = "0.3.2"
flume = { version = "0.11.0", default-features = false, features = [
    "async",
    "select",
] }
async-trait = "0.1"
futures = "0.3"

unicase = "2.7.0"
lazy_static = "1.5.0"
hyper-trust-dns = { version = "0.4.2", features = [
    "rustls-http2",
    "dnssec-ring",
    "dns-over-https-rustls",
    "rustls-webpki",
] }

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["raw_value"] }

thiserror = "1"
anyhow = "1.0.81"

async-sqlite = { version = "0.2", features = ["bundled"] }
rusqlite = "0.30.0"

sqlx = { version = "0.7.4", features = [
    "postgres",
    "json",
    "runtime-tokio",
    "chrono",
    "uuid",
] }
rawsql = "0.1.1"

uuid = { version = "0.8", features = ["serde", "v4"] }
ulid = { version = "0.5.0", features = ["uuid"] }

tile-grid = "0.5.2"

sysinfo = "0.31.2"
remoteprocess = "0.4.13"
kill_tree = { version = "0.2", features = ["tokio"] }
ctrlc = { version = "3.4", features = ["termination"] }

chrono = "0.4.35"

tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"

dotenv = "0.15.0"

strum = "0.26"
strum_macros = "0.26"

mime_guess = "2.0.5"
urlencoding = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
